[package]
name = "rvs_derive"
version = "0.2.2"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "A helper macros implementation for Value Classes in Rust"
homepage = "https://github.com/abdolence/rust-value-struct"
repository = "https://github.com/abdolence/rust-value-struct"
documentation = "https://github.com/abdolence/rust-value-struct"
keywords = ["value", "class", "newtype"]
categories = ["rust-patterns"]
readme = "../README.md"
include = ["Cargo.toml", "src/**/*.rs", "../README.md", "../LICENSE"]

[lib]
name = "rvs_derive"
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "full" ]}
