[package]
name = "rvs_test"
version = "0.3.2"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "Tests for macros implementation for Value Classes in Rust"
homepage = "https://github.com/abdolence/rust-value-struct"
repository = "https://github.com/abdolence/rust-value-struct"
documentation = "https://github.com/abdolence/rust-value-struct"
keywords = ["value", "class"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "../LICENSE"]

[dependencies]
rvstruct = { version = "0.3", path = "../rvs"}
